[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/nave_espacial.png" type="Texture" id=1]
[ext_resource path="res://scripts/nave.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 99, 0, 99, 77 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 99, 77 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 198, 0, 99, 77 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "frente",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "esquerda",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "direita",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 21.25, 16 )

[node name="nave" type="Area2D"]
position = Vector2( 91, 280 )
script = ExtResource( 2 )
velocidade_nave = 130.0

[node name="nave_animada" type="AnimatedSprite" parent="."]
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 4 )
animation = "frente"

[node name="area_colisao_nave" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="canhoes" type="Node2D" parent="."]
position = Vector2( 0, 5 )

[node name="canhao_esquerdo" type="Position2D" parent="canhoes"]
position = Vector2( -15, -8 )

[node name="canhao_direito" type="Position2D" parent="canhoes"]
position = Vector2( 15, -8 )
